<resources>
    <string name="app_name">BykeaPartner</string>
    <string name="button_text_arrived">پہنچ گئے</string>
    <string name="button_text_start">اسٹارٹ</string>
    <string name="button_text_finish">مکمل</string>
    <string name="button_text_ok">OK</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_cancel_urdu">کینسل</string>
    <string name="set_pickup_location">YOUR LOCATION</string>
    <string name="location_text">location</string>
    <string name="error_phone_number_1">Please enter correct mobile number</string>
    <string name="error_field_empty">Required</string>
    <string name="error_picture_not_selected">Picture not selected.</string>
    <string name="error_try_again">Something went wrong. Please try again later.</string>
    <string name="dialog_inactive_message">This option will not get calls from users.
        do you want to make it inactive?</string>
    <string name="permissions_required">Permission Required</string>
    <string name="permissions_location">For the best experience, Bykea needs to use your current location
    to find Jobs for you. Do you want to share your location?</string>
    <string-array name="navDrawerItems">
        <item>Home</item>
        <item>Offline Rides</item>
        <item>Booking History</item>
        <item>Wallet</item>
        <item>How it works</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="navDrawerIcons">
        <item>\u0020ہوم\u0020</item>
        <item>\u0020آف لائن رائیڈز\u0020</item>
        <item>\u0020تفصیل‎\u0020</item>
        <item>\u0020بٹوا‎\u0020</item>
        <item>\u0020طریقہ کار\u0020</item>
        <item>\u0020رابطہ‎\u0020</item>
    </string-array>
    <string-array name="navDrawerNewText">
        <item>0</item> 
        <item>1</item> 
        <item>0</item> 
        <item>0</item> 
        <item>0</item> 
        <item>0</item> 
    </string-array>
    <string name="hint_phone_number"></string>
    <string name="hint_phone_number_nofont">11 Digit Mobile No</string>
    <string name="button_text_help">HELP?</string>
    <string name="button_text_submit_a_request">Submit a Request</string>
    <string name="destination_not_selected_msg">Enter Drop Off</string>
    <string name="internet_error">Problem in internet connectivity. Check your internet connection.</string>
    <string name="facebook_app_id">361388034354652</string>
    <string name="fb_login_protocol_scheme">fb361388034354652</string>
    <string name="loading">Loading…</string>
    <string name="profile_action_sheet_new_tv_camera">Camera</string>
    <string name="profile_action_sheet_new_tv_gallery">Gallery</string>
    <string name="btn_cancel">Cancel</string>
    <string name="camera_permission">Please allow Camera Permissions</string>
    <string name="permissions_docs">Camera Permission required to take Picture for your Profile &amp; Documents</string>
    <string name="java_camera_permission_msg"><![CDATA[For the best Bykea experience, please enable Permission-> Camera in the application settings.]]></string>
    <string name="ranking_footer_text">1) بونس کی کمائی کرائے کی کمائی کے علاوہ</string>
    <string name="ranking_footer_text2">2) بونس حاصل کرنے کے لئے ریٹنگ، فلفلمنٹ، قبولیت کی شرائط مکمل کرنا ضروری ہے</string>
    <string name="ranking_english_header_text">Ranking</string>
    <string name="ranking_urdu_header_text">درجہ بندی</string>
    <string name="muntakhib_text_urdu">منتخب کریں</string>
    <string name="muntakhib_manzil_urdu">منتخب منزل</string>
    <string name="address_not_set_urdu">آپکو شہر بھر کی بکنگ ملیں گی۔</string>
    <string name="muntakhib_manzil_krey_urdu">منزل منتخب نہیں ہے:</string>
    <string name="top_10_text">Top 10 Partners</string>
    <string name="unwan_text">عنوان</string>
    <string name="raqam_text">رقم</string>
    <string name="transfer_text">ٹرانسفر</string>
    <string name="balance_text">بیلنس</string>
    <string name="problem_item">\u0020%1$s\u0020</string>
    <string name="customer_name_urdu">\u0020کسٹمر کا نام\u0020</string>
    <string name="booking_time_urdu">\u0020بکنگ ٹائیم\u0020</string>
    <string name="service_urdu">\u0020سروس\u0020</string>
    <string name="cancel_karne_wala">\u0020کینسل کرنے والا‎\u0020</string>
    <string name="cancel_fee_urdu">\u0020کینسل فیس\u0020</string>
    <string name="total_urdu">\u0020ٹوٹل\u0020</string>
    <string name="masla_darj_karain">\u0020مسئلہ درج کریں\u0020</string>
    <string name="waiting_charges_urdu">\u0020ویٹینگ چارجز\u0020</string>
    <string name="buniyadi_karaya">\u0020بنیادی کرایہ\u0020</string>
    <string name="mokamal_karaya">\u0020مکمل کرایہ\u0020</string>
    <string name="drop_off_discount_urdu">\u0020ڈراپ آف ڈسکاونٹ\u0020</string>
    <string name="promo_urdu">\u0020پرومو\u0020</string>
    <string name="wallet_urdu">\u0020والیٹ\u0020</string>
    <string name="partner_ki_taraf_se_rating">\u0020پارٹنر کی طرف سے ریٹنگ\u0020</string>
    <string name="customer_ki_taraf_se_rating">\u0020کسٹمر کی طرف سے ریٹنگ\u0020</string>
    <string name="logout_text_ur">\u0020لاگ آوٹ؟\u0020</string>
    <string name="cancel_notification">\u0020کسٹمر نے بکنگ کینسل کردی\u0020</string>
    <string name="cancel_notification_by_admin">\u0020آپکی بکنگ کینسل ہوگئی ہے۔\u0020</string>
    <string name="score_urdu">\u0020سکور</string>
    <string name="rs">Rs\u0020</string>
    <string name="percentage_sign">%</string>
    <string name="minus_sign">-</string>
    <string name="no_internet_msg_ur">انٹرنیٹ کنکشن میں کچھ مسئلہ ہے\n برائے مہربانی اپنا انٹرنیٹ کنکشن چیک کریں</string>
    <string name="global_tag" translatable="false">Bykea XLog</string>
    <string name="offline_msg_ur">آف لائن ہونے کے بعد آپ کوئی بکنگ نہیں لے سکتے</string>
    <string name="zaari_malomaat">ذاتی معلومات</string>
    <string name="khidmaat_ki_shart">خدمات کی شرائط</string>
    <string name="licence_ki_maloomaat">لائسنس کی معلومات</string>
    <string name="motorcycle_ki_maloomat">موٹربائیک کی معلومات</string>
    <string name="bank_account_ki_malomaat">بینک اکاؤنٹ کی معلومات</string>
    <string name="email_log_files_to_developer">Email Log Files to developer</string>
    <string name="register_tarining_link_msg">ہم نے آپ کو بزریعہ SMS %1$s پر ٹریننگ ویڈیو کا لنک بھیج دیا ہے۔ اس کو دیکھیں اور کام کا طریقہ سمجھیں۔</string>
    <string name="register_account_active_msg">آپ کا اکاونٹ کاغذات کی تصدیق کے بعد 48 گھنٹے کے اندر ایکٹیو کردیا جائیگا۔</string>
    <string name="invalid_phone_urdu">\u0020خفیہ کوڈ درست نہیں ہے\u0020</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="invalid_code_error_message">Invalid Code</string>
    <string name="current_week">Current Week</string>
    <string name="google_maps_missing_error">Please install Google Maps</string>
    <string name="lord_board_order_distance">%f km</string>
    <string name="pick_multi_delivery_label">پک</string>
    <string name="delivery_multi_delivery_label">ڈیلیوریاں</string>
    <string name="drop_multi_delivery_label">ڈراپ</string>
    <string name="distanceUnit">KM</string>
    <string name="time_multi_delivery_label">وقت</string>
    <string name="TimeUnit">MINS</string>
    <string name="forgot_password_success_msg">آپ کا خوفیہ نمبر آپ کو SMS کیا گیا ہے</string>
    <string name="license_title">License</string>
    <string name="license_title_ur">لائسنس</string>
    <string name="personal_detail_title">Personal Details</string>
    <string name="personal_detail_title_ur">زاتی معلومات</string>
    <string name="trip_history_title">Bookings</string>
    <string name="trip_history_title_ur">تفصیلات</string>
    <string name="bank_account_title">Bank Account</string>
    <string name="bank_account_title_ur">بینک اکاؤنٹ</string>
    <string name="motor_bike_title">Motorbike</string>
    <string name="motor_bike_title_ur">موٹر سائیکل</string>
    <string name="splash_welcome_message">حرکت میں برکت</string>
    <string name="driver_demand_offline_error_ur">آپ آف لائن ہیں ایکٹو ہوکے بکنگ حاصل کریں۔</string>
    <string name="register_with_mobile">موبائل نمبر درج کریں</string>
    <string name="unauthorized_title">UnAuthorized</string>
    <string name="unauthorized_message">Your account is logged in to another device. You are not login here anymore</string>
    <string name="unauthorized_message_fake_gps">We strictly discourage usage of Fake GPS, please disable this and login again. Thank you! </string>
    <string name="unauthorized_message_session_expired">Session Expired. Please Log in again.</string>
    <string name="licence_expire_title">Licence Expired</string>
    <string name="licence_expire_message">Your driving licence is expired. Please renew your driving licence and then contact support.</string>
    <string name="otp_submit">submit</string>
    <string name="verification_call_me_msg_ur">مجھے کال کر کے کوڈ دیں</string>
    <string name="digit_zero">0</string>
    <string name="force_app_update_link">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="force_app_update_title">اعلان !</string>
    <string name="force_app_update_message_local_ur">بائيکیا پارٹنر ایپ کو برائے مہربانی فوراً اپڈیٹ کریں۔</string>
    <string name="driver_licence_expire_error">your license has expired</string>
    <string name="driver_licence_expire_error_ur">آپکا لائسنس ایکسپائر ہے ، كال بائیکیا</string>
    <string name="error_heading">Error</string>
    <string name="invalid_code_error">Invalid Verification Code</string>
    <string name="send_code_via_call_ur">\u0020کال کے زریعے تصدیقی کوڈ حاصل کریں\u0020</string>
    <string name="verify_on_call_ur">\u0020کال پر تصدیق\u0020</string>
    <string name="sms">\u0020SMS\u0020</string>
    <string name="enter_code_ur">\u0020کوڈ درج کریں\u0020</string>
    <string name="received_code_ur">\u0020اس نمبر پر موصول کردہ\u0020</string>
    <string name="region_out_message_ur">  آپکا اکاؤنٹ  اس شہر میں بلاک ہے </string>
    <string name="account_blocked_message_ur">آپکا ا کاؤنٹ بند ہے، كال بائیکیا</string>
    <string name="gps_enable_initial_message"> برائے مہربانی اپنا</string>
    <string name="GPS_middle_message">GPS</string>
    <string name="gps_enable_ending_message"> آن کریں </string>
    <string name="gps_high_accuracy_error_ur_one">اپنا جی پي ایس </string>
    <string name="gps_high_accuracy_error_ur_two">\nHigh Accuracy\n</string>
    <string name="gps_high_accuracy_error_ur_three"> پے آن کریں۔</string>
    <string name="notification_title_driver_login_location">Logged in fetching location</string>
    <string name="notification_title_driver_logout_location">Fetching location</string>
    <string name="notification_title_driver_status">Your Status: %1$s</string>
    <string name="notification_title_driver_trip">Booking# %1$s is in %2$s state</string>
    <string name="battery_optimize_error_title">Battery Optimize Error</string>
    <string name="battery_optimize_error_message">Provide Battery Optimize permission for making you online</string>
    <string name="imei_report_part_one_ur">اس موبائل کا </string>
    <string name="imei_report_part_two"> IMEI</string>
    <string name="imei_report_part_three_ur">نمبر ہمارے ریکارڈ میں موجود نہیں ہے۔</string>
    <string name="withdraw_confirmation">کیا آپ یہ رقم نکالنا چاہتے ہیں؟</string>
    <string name="amount_lbl">رقم</string>
    <string name="fees_lbl">فیس</string>
    <string name="total_lbl">ٹوٹل</string>
    <string name="cancel">کینسل</string>
    <string name="yes">ہاں</string>
    <string name="thanks">شکریہ</string>
    <string name="you_complain">آپ کی شکایت</string>
    <string name="issue_submitted_detail">درج کردہ شکایت دیکھیں</string>
    <string name="move_to_home_screen">ہوم سکرین پر جائیں</string>
    <string name="enter_your_temperature">اپنا درجہ حرارت درج کریں</string>
    <string name="temperature_value_hint">98.2</string>
    <string name="numbers_with_decimal">0123456789.</string>
</resources>