<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="200dp"
    android:background="@color/windowBackground">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btnLayout"
        android:background="@color/textColorSecondary" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.bykea.pk.partner.widgets.FontTextView
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey_square"
            android:gravity="center"
            android:text="@string/button_text_cancel"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/textsize.title"
            android:visibility="visible"
            app:fontName="MuseoSans_1.otf" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColorSecondary" />

        <com.bykea.pk.partner.widgets.FontTextView
            android:id="@+id/positive"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_green_square"
            android:gravity="center"
            android:text="@string/button_text_ok"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/textsize.title"
            android:visibility="visible"
            app:fontName="MuseoSans_1.otf" />

    </LinearLayout>

    <com.bykea.pk.partner.widgets.FontTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin.normal"
        android:gravity="center"
        android:text="@string/dialog_inactive_message"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize.normal"
        app:fontName="roboto_regular.ttf" />

</RelativeLayout>
