<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.bykea.pk.partner.ui.helpers.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/withdraw_confirmation"
            android:textColor="@color/black"
            android:textSize="@dimen/_19sdp"
            app:fontName="jameel_noori_nastaleeq.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:id="@+id/confirmation_payment_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:fontName="open_sans_regular.ttf" />

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:fontName="jameel_noori_nastaleeq.ttf" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:id="@+id/confirmation_fees_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:text="0"
                    android:textColor="@color/color_gray636363"
                    android:textSize="@dimen/_14sdp"
                    app:fontName="open_sans_regular.ttf" />

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/fees_lbl"
                    android:textColor="@color/color_gray636363"
                    android:textSize="@dimen/_14sdp"
                    app:fontName="jameel_noori_nastaleeq.ttf" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/color_graya5a5a5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:id="@+id/confirmation_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Rs. 0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_26sdp"
                    app:fontName="open_sans_regular.ttf" />

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_26sdp"
                    app:fontName="jameel_noori_nastaleeq.ttf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:id="@+id/dismiss_withdraw_txtview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_border"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/color_AE2939"
                    android:textSize="@dimen/_17sdp"
                    app:fontName="jameel_noori_nastaleeq.ttf" />


                <com.bykea.pk.partner.ui.helpers.FontTextView
                    android:id="@+id/confirm_withdraw_txtview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp"
                    app:fontName="jameel_noori_nastaleeq.ttf" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>