<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@drawable/country_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.bykea.pk.partner.widgets.AutoFitFontTextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin.normal"
            android:maxLines="1"
            android:text="@string/enter_your_temperature"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_20sdp"
            app:fontName="jameel_noori_nastaleeq.ttf" />

        <com.bykea.pk.partner.widgets.FontEditText
            android:id="@+id/editTextTemperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin.normal"
            android:digits="@string/numbers_with_decimal"
            android:gravity="center"
            android:hint="@string/temperature_value_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <ImageView
                android:id="@+id/negativeBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height.large.medium"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/button_light_grey_square"
                android:gravity="center"
                android:padding="@dimen/_11sdp"
                android:src="@drawable/cross_icon"
                android:tint="@color/grey" />

            <ImageView
                android:id="@+id/positiveBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height.large.medium"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/button_green_square"
                android:gravity="center"
                android:padding="@dimen/_11sdp"
                android:src="@drawable/correct_symbol_square" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>